# fleet

./: .gitignore  .turbo.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  fleet.toml  rustfmt.toml  todo.md  turbo.toml
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: linux.yml  macos.yml  rust.yml  windows.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: mod.rs
example/: .turbo.toml  Cargo.toml  target
installer/: Cargo.toml  fleet.toml  install.sh
installer/.cargo/: config.toml
installer/src/: main.rs
src/: main.rs
src/cli/: app.rs  cli.rs  help.rs  mod.rs
src/cli/help/: mod.rs
src/cli/prompt/: input.rs  mod.rs  prompts.rs
src/commands/: doctor.rs  init.rs  mod.rs
src/config/: cargo.rs  global.rs  mod.rs
src/core/: mod.rs
src/core/commands/: bloat.rs  build.rs  configure.rs  init.rs  mod.rs  run.rs  udeps.rs
src/core/config/: cargo.rs  enable.rs  global.rs  mod.rs
src/utils/: bloat.rs  configure.rs  mod.rs
utils/: Cargo.toml
utils/src/: app.rs  lib.rs
utils/src/types/config/: global.rs
