[package]
name = "turbo"
version = "0.1.0"
edition = "2021"
description = "Rust compilations, made faster"
authors = ["dimensionhq <team@dimension.dev>"]
license = "Apache 2.0"

[dependencies]
ansi_term = "0.12"
dirs = "4.0.0"
wsl="0.1.0"
sysinfo="0.23.10"

[dependencies.clap]
version = "3.1.8"
features = ["derive", "cargo", "std", "color"]
default-features = false

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.toml]
version = "0.5.8"
features = ["preserve_order"]

[dependencies.uuid]
version = "0.8"
features = ["serde", "v4"]

[profile.dev]
opt-level=0
debug=2
incremental=true