[package]
name = "fleet-rs"
version = "0.0.7"
edition = "2021"
description = "The blazing fast build tool for Rust."
authors = ["Dimension <team@dimension.dev>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://fleet.rs"
repository = "https://github.com/dimensionhq/fleet"
keywords = ["rust", "build", "tool"]
categories = ["build", "rust-build-tools"]

[[bin]]
name = "cargo-fleet"
path = "src/main.rs"

[[bin]]
name = "fleet"
path = "src/../src/main.rs"
test = false
bench = false


[build-dependencies]
rustc_version = "0.4.0"

[dependencies]
ansi_term = "0.12"
dirs = "4.0.0"
wsl = "0.1.0"
sysinfo = "0.23.10"
rustc_version = "0.4.0"

[dependencies.clap]
version = "3.1.8"
features = ["derive", "cargo", "std", "color"]
default-features = false

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.toml]
version = "0.5.8"
features = ["preserve_order"]

[dependencies.uuid]
version = "0.8"
features = ["serde", "v4"]

[profile.dev]
opt-level = 0
debug = 2
incremental = true
