[package]
name = "utils"
version = "0.0.9"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enable-ansi-support="0.1.2"
colored = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
toml_edit = "0.14.2"
dirs="4.0.0"
toml="0.5.0"